--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,3 +37,14 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: 'C:\Users\sanjay\git-work\azure-voting-app-redis'
+    Contents: 'azure-vote-all-in-one-redis.yaml'
+    TargetFolder: '$(build.artifactstagingdirectory)'
+- task: KubernetesManifest@0
+  inputs:
+    action: 'deploy'
+    kubernetesServiceConnection: 'ss-aks17-vote-new'
+    namespace: 'vote-new'
+    manifests: 'azure-vote-all-in-one-redis'
