Update azure-pipelines.yml for Azure Pipelines - test

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,7 @@ stages:
        TargetFolder: '$(build.artifactstagingdirectory)'
 
 
+stage:Deploy
 - task: KubernetesManifest@0
   inputs:
     action: 'deploy'
