--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,18 +37,18 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
-    - task: CopyFiles@2 
-      inputs:
-       SourceFolder: 'C:\Users\sanjay\git-work\azure-voting-app-redis'
-       Contents: 'azure-vote-all-in-one-redis.yaml'
-       TargetFolder: '$(build.artifactstagingdirectory)'
-
+    -    
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Pipeline.Workspace)'
+    artifact: 'manifests'
+    publishLocation: 'pipeline'
 
 - stage: Deploy
   displayName: deploy
   jobs:
     - job: deploy
-      steps:
+      steps: 
       - task: KubernetesManifest@0
         inputs:
           kubernetesServiceConnection: 'ss-aks17SP-20200817095115'
