--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -63,7 +63,7 @@ stages:
             inputs:
               action: createSecret
               secretName: $(imagePullSecret)
-              namespace: $(k8sNamespace)              
+              namespace: vote-new             
               dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
               
               
@@ -71,7 +71,7 @@ stages:
             displayName: Deploy to Kubernetes cluster
             inputs:
               action: deploy
-              namespace: $(k8sNamespace)
+              namespace: vote-new
               manifests: |
                 $(System.ArtifactsDirectory)/manifests/deployment.yml
                 $(System.ArtifactsDirectory)/manifests/service.yml
