--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -59,10 +59,13 @@ stages:
       runOnce:
         deploy:
           steps:
-          - task: DownloadPipelineArtifact@2
+          - task: CopyFiles@2
             inputs:
-              artifactName: 'manifests'
-              downloadPath: '$(Pipeline.Workspace)/manifests'
+              SourceFolder: 'C:\Users\sanjay\git-work\azure-voting-app-redis'
+              Contents: '*.yaml'
+              TargetFolder: '$(Pipeline.Workspace)/manifests'
+
+          
 
           - task: KubernetesManifest@0
             displayName: Create imagePullSecret
