Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -63,7 +63,7 @@ stages:
             inputs:
               buildType: 'current'
               downloadType: 'single'
-              artifactName: '*.yaml'
+              artifactName: '*.yml'
               downloadPath: '$(Pipeline.Workspace)/manifests'
           
           
