--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -43,6 +43,15 @@ stages:
           
     - upload: manifests
       artifact: manifests
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
+    
+
+    
+          
 
 - stage: Deploy
   displayName: Deploy stage
